--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,1 +1,15 @@
 @import '~bootstrap/scss/bootstrap';
+
+main {
+    background-color: aqua;
+    padding-top: 2rem;
+
+    .cards {
+
+        p,
+        h5,
+        h6 {
+            color: purple;
+        }
+    }
+}
